--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:label="@string/app_name" >
         </activity>
         
+        <activity
+            android:name="fr.tingo.calendrier.CalendarActivity"
+            android:label="@string/app_name" >
+        </activity>
         
         <activity
             android:name="fr.tingo.istudent.options.OptionActivity"
