--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,8 +18,10 @@
         
         
         <activity
-            android:name="fr.tingo.istudent.Main"
+            android:name=".Main"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -27,20 +29,26 @@
         </activity>
 
         <activity
-            android:name="fr.tingo.istudent.actualite.ActualiteActivity"
+            android:name=".social.SocialActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+                
+        <activity
+            android:name=".social.actualite.ActualiteActivity"
             android:label="@string/app_name" >
         </activity>
         
         <activity
-            android:name="fr.tingo.calendrier.CalendarActivity"
+            android:name=".calendrier.CalendarActivity"
             android:label="@string/app_name" >
         </activity>
-        
+
         <activity
-            android:name="fr.tingo.istudent.options.OptionActivity"
+            android:screenOrientation="portrait"
+            android:name=".bob.BobActivity"
             android:label="@string/app_name" >
         </activity>
-        
                 
     </application>
 
