--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,26 +18,44 @@
         
         
         <activity
+            android:screenOrientation="portrait"
             android:name="fr.tingo.istudent.Main"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            
         </activity>
 
         <activity
-            android:name="fr.tingo.istudent.actualite.ActualiteActivity"
+            android:screenOrientation="portrait"
+            android:name="fr.tingo.istudent.social.actualite.ActualiteActivity"
             android:label="@string/app_name" >
         </activity>
         
         <activity
-            android:name="fr.tingo.calendrier.CalendarActivity"
+            android:screenOrientation="portrait"
+            android:name="fr.tingo.istudent.calendrier.CalendarActivity"
             android:label="@string/app_name" >
         </activity>
         
         <activity
-            android:name="fr.tingo.istudent.options.OptionActivity"
+            android:screenOrientation="portrait"
+            android:name="fr.tingo.istudent.social.SocialActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:screenOrientation="portrait"
+            android:name="fr.tingo.istudent.cours.CoursActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+
+		<activity
+            android:screenOrientation="portrait"
+            android:name="fr.tingo.istudent.cours.CahierActivity"
             android:label="@string/app_name" >
         </activity>
         
