--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,17 +45,22 @@
         
         <activity
             android:screenOrientation="portrait"
-            android:name="fr.tingo.istudent.cours.CoursActivity"
+            android:name=".cours.CahierActivity"
             android:label="@string/app_name" >
         </activity>
         
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".cours.CoursActivity"
+            android:label="@string/app_name" >
+        </activity>
 
 		<activity
             android:screenOrientation="portrait"
             android:name=".calendrier.CalendarActivity"
             android:label="@string/app_name" >
         </activity>
-
+        
         <activity
             android:screenOrientation="portrait"
             android:name=".bob.BobActivity"
