--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,6 +35,12 @@
             android:label="@string/app_name" >
         </activity>
         
+         <activity
+            android:screenOrientation="landscape"
+            android:name=".emploi_du_temps.TimetableActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
                 
         <activity
             android:screenOrientation="portrait"
@@ -58,12 +64,6 @@
 		<activity
             android:screenOrientation="portrait"
             android:name=".calendrier.CalendarActivity"
-            android:label="@string/app_name" >
-        </activity>
-        
-        <activity
-            android:screenOrientation="portrait"
-            android:name=".bob.BobActivity"
             android:label="@string/app_name" >
         </activity>
                 
