--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,7 +36,7 @@
         </activity>
         
          <activity
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:name=".emploi_du_temps.TimetableActivity"
             android:label="@string/app_name" >
         </activity>
